--- a/source/sass/blocks/top-banner.scss
+++ b/source/sass/blocks/top-banner.scss
@@ -111,6 +111,7 @@
   max-width: 410px;
   width: 100%;
   min-height: 55px;
+  user-select: none;
 
   &:hover {
     opacity: 0.3;
